adde3d contact page

--- a/views/contact.html
+++ b/views/contact.html
@@ -14,11 +14,90 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand px-5 pb-5 pt-2">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html"><img id="logo" src="../styles/images/lung-icon-excited.png"
+                            alt="logo"></a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="work.html">Work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8 col-lg-6 py-5">
+                <div class="card border theme-border-color-custom">
+                    <div class="card-header">
+                        <div class="theme-background-color-custom text-white text-center py-2">
+                            <h3>
+                                <i class="fa fa-envelope"></i> Contact
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fa fa-user theme-background-color-custom"></i>
+                                    </div>
+                                </div>
+                                <input type="text" class="form-control" id="name" name="name"
+                                    placeholder="Enter your name" required="">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fa fa-envelope theme-background-color-custom"></i>
+                                    </div>
+                                </div>
+                                <input type="email" class="form-control" id="name" name="email"
+                                    placeholder="Enter your email" required="">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fa fa-comment theme-background-color-custom"></i>
+                                    </div>
+                                </div>
+                                <textarea class="form-control" placeholder="'I think your website is great!' -Everyone"
+                                    required=""></textarea>
+                            </div>
+                        </div>
+
+                        <div class="text-center">
+                            <input type="button" value="Sumbit"
+                                class="btn theme-background-color-custom btn-block rounded-0 py-2 text-white">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
-    
+
 
 
 
@@ -41,3 +120,4 @@
 </body>
 
 </html>
+
