Added content for blobber royal

--- a/views/work.html
+++ b/views/work.html
@@ -61,11 +61,7 @@
                         <h3 class="py-2">What I've been building</h3>
                     </div>
                     <div class="col-md-12">
-                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quae velit aliquid ut
-                            ineligendi, sitat nam vel itaque omnis animi doloribus reiciendis fugit modi et magni
-                            temporibus officia! Loremipsum dolor sit amet consectetur adipisicing elit. Accusamus
-                            debitis, nulla beatae ad inventoreillum temporibus odio asperiores laudantium voluptates
-                            tenetur earum numquam nobis vitae impeditvoluptatum ducimus, libero at.</span>
+                        <span>I'm a recent graduate of the university of Washington's full stack web development bootcamp. The course focused on the MERN development stack, however I've also learned some other technologies along the way, such as mySQL, ReactNative, and Java. Below are some of the projects I've worked on throughout the course.</span>
                     </div>
                 </div>
 
